# mem8

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  ROADMAP.md  pyproject.toml  validate_implementation.py
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: m8-validate.md  research_codebase.md
.github/workflows/: deploy-docs.yml  preview-docs.yml
ai_mem/: __init__.py  cli.py
backend/: .env.example  pyproject.toml
backend/src/aimem_api/: config.py  database.py  database_types.py  main.py
backend/src/aimem_api/models/: base.py  team.py  thought.py  user.py
backend/src/aimem_api/routers/: health.py  search.py  teams.py  thoughts.py
backend/src/mem8_api/routers/: public.py
backend/src/mem8_api/services/: filesystem_thoughts.py
documentation/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
documentation/docs/: concepts.md  external-templates.md  intro.md  workflows.md
documentation/docs/contributing/: index.md
documentation/docs/user-guide/: cli-commands.md  getting-started.md
documentation/docs/workflows/: advanced.md  best-practices.md
documentation/src/components/AnimatedComponents/: CopyButton.tsx
documentation/src/components/HomepageFeatures/: index.tsx
documentation/src/css/: custom.css
documentation/src/pages/: index.module.css  index.tsx
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/thought/[id]/edit/: page.tsx
frontend/hooks/: useApi.ts  useWebSocket.ts
frontend/lib/: api.ts
mem8/: claude_integration.py  cli_typer.py
mem8/cli/: main.py
mem8/cli/commands/: __init__.py  core.py
mem8/core/: config.py  memory.py  smart_setup.py  template_source.py  toolbelt.py  utils.py
mem8/integrations/: github.py
mem8/templates/: CLAUDE.md  example-mem8-config.yaml
mem8/templates/claude-dot-md-template/: README.md  cookiecutter.json
mem8/templates/claude-dot-md-template/hooks/: post_gen_project.py
mem8/templates/claude-dot-md-template/{{cookiecutter.project_slug}}/agents/: github-workflow-agent.md
mem8/templates/claude-dot-md-template/{{cookiecutter.project_slug}}/commands/: research_codebase.md
mem8/templates/shared-thoughts-template/{{cookiecutter.project_slug}}/thoughts/shared/tickets/: .gitkeep
tests/: test_ai_mem_cli.py  test_doctor_integration.py  test_doctor_manifest.py  test_external_template_sources.py  test_init_data_preservation.py  test_init_interactive.py  test_template_source.py  test_toolbelt.py
thoughts/shared/plans/: humanlayer-to-mem8-migration.md
